# InferLab

./: .gitignore  .gitmodules  LICENSE  PROGRESS.md  QUICKSTART.md  README  README.md
.cursor/audit/: gemini3pro.md
.cursor/commands/: anki.md  band.md  experiment.md  firstprinciple.md  hpc.md  karpathy.md  leetcode.md  ragnor.md  sysdesign.md
.cursor/plans/: llm推理工程师：完整修炼路径_465719e4.plan.md  llm推理架构师：世界顶级路径_93e02492.plan.md
.cursor/rules/: code-style.mdc  my-llm-inference-rules.mdc
.github/workflows/: release.yml
00_mountain/cuda_drills/: README.md
00_mountain/cuda_drills/02_memory_magic/: 01_sgemm_cuda.cu
00_mountain/leetcode/: CMakeLists.txt  Cargo.toml  llm-inference-dsa-roadmap.md  neetcode150.md
00_mountain/leetcode/llm-infer-ds/circular_queue/: circular_queue.cpp  circular_queue.py  circular_queue.rs
00_mountain/leetcode/llm-infer-ds/doubly_linked_list/: doubly_linked_list.py  doubly_linked_list.rs
00_mountain/leetcode/llm-infer-ds/hash_map/: Cargo.toml  hash_map.cpp  hash_map.py  hash_map.rs
00_mountain/leetcode/llm-infer-ds/heap/: heap.cpp
00_mountain/leetcode/llm-infer-ds/trie/: trie.py
00_mountain/leetcode/llm-infer-ds/vector/: Cargo.toml  vector.cpp  vector.py  vector.rs
00_mountain/leetcode/llm-leetcode-20/lc146_lru_cache/: lc146.rs
00_mountain/leetcode/llm-leetcode-20/lc208_trie/: lc208.py  lc208.rs
00_mountain/leetcode/llm-leetcode-20/lc215_kth_largest/: lc215.py  lc215.rs
00_mountain/leetcode/llm-leetcode-20/lc238_product_except_self/: lc238.cpp
00_mountain/leetcode/llm-leetcode-20/lc239_sliding_window_max/: lc239.rs
00_mountain/leetcode/llm-leetcode-20/lc253_meeting_rooms_ii/: lc253.rs
00_mountain/leetcode/llm-leetcode-20/lc295_find_median/: lc295.py  lc295.rs
00_mountain/leetcode/llm-leetcode-20/lc33_search_rotated_array/: lc33.rs
00_mountain/leetcode/llm-leetcode-20/lc380_insert_delete_getrandom/: lc380.cpp  lc380.py
00_mountain/leetcode/llm-leetcode-20/lc3_longest_substring/: lc3.cpp  lc3.rs
00_mountain/leetcode/llm-leetcode-20/lc42_trapping_rain_water/: lc42.cpp
00_mountain/leetcode/llm-leetcode-20/lc435_non_overlapping_intervals/: lc435.py  lc435.rs
00_mountain/leetcode/llm-leetcode-20/lc54_spiral_matrix/: lc54.cpp
00_mountain/leetcode/llm-leetcode-20/lc56_merge_intervals/: lc56.py  lc56.rs
00_mountain/leetcode/llm-leetcode-20/lc622_circular_queue/: lc622.cpp  lc622.py
01_mini_vllm/: README.md
01_mini_vllm/core/v1_naive/: README.md  __init__.py  block_manager.py  engine.py  scheduler.py
01_mini_vllm/core/v2_lru/: README.md  __init__.py
01_mini_vllm/core/v3_priority/: README.md  __init__.py
01_mini_vllm/core/v4_prefix/: README.md  __init__.py
01_mini_vllm/tests/: test_basic.py  test_v1_naive.py  test_v2_lru.py
02_surgery_room/: README.md
02_surgery_room/debug_logs/: .gitkeep
02_surgery_room/experiments/: README.md  capture_timeline.py  exp001_verify_lru.py  exp002_scheduler_policy.py  exp004_nsight_profiling.py  reproduce_oom.py
03_cockpit/: README.md  package.json
03_cockpit/src/: App.css
03_cockpit/src-tauri/: tauri.conf.json
03_cockpit/src-tauri/src/: lib.db
app/infer-lab/: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  release-key.base64  release-key.keystore
app/infer-lab/migrations/: init.sql
app/infer-lab/src/: App.css  App.tsx
app/infer-lab/src-tauri/: Cargo.toml
app/infer-lab/src-tauri/src/: db.rs  lib.rs  main.rs
app/infer-lab/src/components/: Mountain.css  Mountain3D.tsx  TodayPanel.css  TodayPanel.tsx
app/infer-lab/src/models/: schema.ts
app/infer-lab/src/state/: useAppData.ts
docs/: github-actions.plan.md  migration-guide.md  my-infer-road.md  tauri.plan.md
leetcode/: neetcode150.md
mountain/explore/experiment/: README.md
mountain/explore/experiment/function_analysis/: array_amortized_analysis.py  array_insert_analysis.py  set_matplotlib_font.py
mountain/hpc/nn-zero-to-hero/micrgrad/: micrograd_scratch.py
mountain/leetcode/: Cargo.toml  llm-inference-dsa-roadmap.md
mountain/leetcode/ds/collection/: README.md
mountain/leetcode/ds/graph/: README.md
mountain/leetcode/ds/linear/: README.md
mountain/leetcode/ds/tree/: README.md
mountain/leetcode/llm-infer-ds/doubly_linked_list/: doubly_linked_list.cpp
mountain/leetcode/llm-infer-ds/heap/: heap.py  heap.rs
mountain/leetcode/llm-infer-ds/trie/: trie.cpp  trie.rs
mountain/leetcode/llm-infer-ds/vector/: vector.rs
mountain/leetcode/llm-leetcode-20/lc146_lru_cache/: lc146.cpp  lc146.py
mountain/leetcode/llm-leetcode-20/lc15_3sum/: lc15.cpp  lc15.py  lc15.rs
mountain/leetcode/llm-leetcode-20/lc207_course_schedule/: lc207.cpp  lc207.py  lc207.rs
mountain/leetcode/llm-leetcode-20/lc208_trie/: lc208.cpp
mountain/leetcode/llm-leetcode-20/lc211_add_search_words/: lc211.cpp  lc211.py  lc211.rs
mountain/leetcode/llm-leetcode-20/lc215_kth_largest/: lc215.cpp
mountain/leetcode/llm-leetcode-20/lc238_product_except_self/: lc238.py  lc238.rs
mountain/leetcode/llm-leetcode-20/lc239_sliding_window_max/: lc239.cpp  lc239.py
mountain/leetcode/llm-leetcode-20/lc23_merge_k_lists/: lc23.cpp  lc23.py  lc23.rs
mountain/leetcode/llm-leetcode-20/lc253_meeting_rooms_ii/: lc253.cpp  lc253.py
mountain/leetcode/llm-leetcode-20/lc295_find_median/: lc295.cpp
mountain/leetcode/llm-leetcode-20/lc33_search_rotated_array/: lc33.cpp  lc33.py
mountain/leetcode/llm-leetcode-20/lc380_insert_delete_getrandom/: lc380.rs
mountain/leetcode/llm-leetcode-20/lc3_longest_substring/: lc3.py
mountain/leetcode/llm-leetcode-20/lc42_trapping_rain_water/: lc42.py  lc42.rs
roadmaps/: my-infer-road.md
(+133 files in other folders)
