# ==============================================================================
# LLM Inference 专攻 - Rust Workspace
# ==============================================================================
# 
# 本 workspace 包含两大模块：
#   1. llm-infer-ds: 6个核心数据结构（对应推理引擎模块）
#   2. llm-leetcode-20: 20道特种兵题目（C++ 实现为主，Rust 为辅）
#
# 注：C++ 文件无需在此配置，直接编译运行即可
# ==============================================================================

[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM Inference Engineer"]
