[package]
name = "infer-lab"
version = "0.1.0"
description = "InferLab - 爬山学习进度追踪"
authors = ["you"]
edition = "2021"

[lib]
name = "infer_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
